Closed
Bug 347854
Opened 19 years ago
Closed 18 years ago
UpdateTranslucentWindowAlphaInternal not defined in minimal profile
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9beta2
People
(Reporter: romaxa, Assigned: romaxa)
References
Details
Attachments
(1 file, 6 obsolete files)
|
1.37 KB,
patch
|
roc
:
review+
roc
:
superreview+
mtschrep
:
approval1.9+
|
Details | Diff | Splinter Review |
Steps to Reproduce:
1. cvs -z3 -d :pserver:anonymous@cvs-mirror.mozilla.org:/cvsroot co
mozilla/client.mk
2. make -f client.mk checkout
mozconfig:
.....................................
mk_add_options MOZ_CO_PROJECT=xulrunner
ac_add_options --enable-application=xulrunner
ac_add_options --disable-javaxpcom
ac_add_options --disable-js-static-build
ac_add_options --disable-tests
ac_add_options --with-embedding-profile=minimal
.....................................
3. Apply patch from bug 347851 and Bug 330331
https://bugzilla.mozilla.org/attachment.cgi?id=232698
https://bugzilla.mozilla.org/attachment.cgi?id=232694
4. autoconf && ./configure && make
Actual Results:
Building accessible module failed with errors:
...................................................................
romaxa@romaxa-sr:/home/romaxa/devel/realpc/xulrunner/mozilla_minimal/obj-minimal-i686-pc-linux-gnu/widget/src/gtk2$ make -s
nsWindow.cpp
/home/romaxa/devel/realpc/xulrunner/mozilla_minimal/widget/src/gtk2/nsWindow.cpp: In member function 'virtual nsresult nsWindow::Destroy()':
/home/romaxa/devel/realpc/xulrunner/mozilla_minimal/widget/src/gtk2/nsWindow.cpp:408: warning: ISO C++ forbids casting between pointer-to-function and pointer-to-object
/home/romaxa/devel/realpc/xulrunner/mozilla_minimal/widget/src/gtk2/nsWindow.cpp: In member function 'gboolean nsWindow::OnExposeEvent(GtkWidget*, GdkEventExpose*)':
/home/romaxa/devel/realpc/xulrunner/mozilla_minimal/widget/src/gtk2/nsWindow.cpp:1648: error: 'UpdateTranslucentWindowAlphaInternal' was not declared in this scope
/home/romaxa/devel/realpc/xulrunner/mozilla_minimal/widget/src/gtk2/nsWindow.cpp: At global scope:
/home/romaxa/devel/realpc/xulrunner/mozilla_minimal/widget/src/gtk2/nsWindow.cpp:1428: warning: 'GdkModifierType gdk_keyboard_get_modifiers()' defined but not used
/home/romaxa/devel/realpc/xulrunner/mozilla_minimal/widget/src/gtk2/nsWindow.cpp:1441: warning: 'void gdk_window_flash(GdkWindow*, unsigned int, unsigned int, GdkRegion*)' defined but not used
make[1]: *** [nsWindow.o] Error 1
make: *** [all] Error 2
...................................................................
Expected Results:
Building finished successefully
| Assignee | ||
Comment 1•19 years ago
|
||
Attachment #232701 -
Flags: first-review?
| Assignee | ||
Comment 2•19 years ago
|
||
Attachment #232701 -
Attachment is obsolete: true
Attachment #232720 -
Flags: first-review?
Attachment #232701 -
Flags: first-review?
| Assignee | ||
Comment 3•19 years ago
|
||
Attachment #233093 -
Flags: first-review?
| Assignee | ||
Updated•19 years ago
|
Attachment #232720 -
Attachment is obsolete: true
Attachment #232720 -
Flags: first-review?
| Assignee | ||
Updated•19 years ago
|
Attachment #233093 -
Flags: first-review? → first-review?(timeless)
| Assignee | ||
Updated•19 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 4•19 years ago
|
||
Attachment #233093 -
Attachment is obsolete: true
Attachment #233561 -
Flags: first-review?(timeless)
Attachment #233093 -
Flags: first-review?(timeless)
| Assignee | ||
Comment 5•19 years ago
|
||
Attachment #233561 -
Attachment is obsolete: true
Attachment #233562 -
Flags: first-review?(timeless)
Attachment #233561 -
Flags: first-review?(timeless)
Status: ASSIGNED → NEW
Component: XULRunner → Widget: Gtk
Flags: first-review?(timeless)
Product: Toolkit → Core
QA Contact: xulrunner → gtk
Attachment #233562 -
Flags: review?(roc)
Why is this needed?
| Assignee | ||
Comment 7•19 years ago
|
||
(In reply to comment #6)
> Why is this needed?
>
??? Because building failed in embedding-profile=minimal configuration....
Is someone calling these when MOZ_XUL is not defined? Perhaps those callers should be fixed directly
| Assignee | ||
Updated•18 years ago
|
Summary: Building XULRunner with --embedding-profile=minimal failed → UpdateTranslucentWindowAlphaInternal not defined in minimal profile
| Assignee | ||
Comment 9•18 years ago
|
||
You mean like it was done here:
https://bugzilla.mozilla.org/attachment.cgi?id=233093
?
Comment on attachment 233562 [details] [diff] [review]
C99 fixes
Hmm, just found this old request.
Update this to trunk though.
Attachment #233562 -
Flags: superreview+
Attachment #233562 -
Flags: review?(roc)
Attachment #233562 -
Flags: review+
Updated•18 years ago
|
Assignee: nobody → romaxa
Comment 11•18 years ago
|
||
Attachment #233562 -
Attachment is obsolete: true
Attachment #284779 -
Flags: approval1.9?
| Assignee | ||
Comment 12•18 years ago
|
||
I tried to remove that MOZ_XUL define at all, and it seems work fine.
Attachment #286130 -
Flags: superreview?(roc)
Attachment #286130 -
Flags: review?(roc)
Attachment #286130 -
Flags: superreview?(roc)
Attachment #286130 -
Flags: superreview+
Attachment #286130 -
Flags: review?(roc)
Attachment #286130 -
Flags: review+
| Assignee | ||
Updated•18 years ago
|
Attachment #284779 -
Attachment is obsolete: true
Attachment #284779 -
Flags: approval1.9?
| Assignee | ||
Updated•18 years ago
|
Attachment #286130 -
Flags: approval1.9?
| Assignee | ||
Updated•18 years ago
|
Keywords: checkin-needed
Updated•18 years ago
|
Keywords: checkin-needed
Updated•18 years ago
|
Attachment #286130 -
Flags: approval1.9? → approval1.9+
Updated•18 years ago
|
Keywords: checkin-needed
Comment 13•18 years ago
|
||
Checking in widget/src/gtk2/nsWindow.cpp;
/cvsroot/mozilla/widget/src/gtk2/nsWindow.cpp,v <-- nsWindow.cpp
new revision: 1.236; previous revision: 1.235
done
Checking in widget/src/gtk2/nsWindow.h;
/cvsroot/mozilla/widget/src/gtk2/nsWindow.h,v <-- nsWindow.h
new revision: 1.79; previous revision: 1.78
done
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M10
Depends on: 403724
You need to log in
before you can comment on or make changes to this bug.
Description
•