Bug 347854 - "UpdateTranslucentWindowAlphaInternal not defined in minimal profile" [p=romaxa r+sr=roc a1.9=schrep]